mongodb-playlist.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-playlist
spec:
  serviceName: "mongodb-playlist"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-playlist
  template:
    metadata:
      labels:
        app: mongodb-playlist
    spec:
      containers:
        - name: mongodb-playlist
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data-playlist
              mountPath: /data/db
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
            - "--oplogSize"
            - "128"
      volumeClaimTemplates:
        - metadata:
            name: mongo-data-playlist
          spec:
            accessModes: [ "ReadWriteOnce" ]
            resources:
              requests:
                storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-playlist
  labels:
    app: mongodb-playlist
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-playlist
  type: ClusterIP
