mongodb-track.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-track
  labels:
    app: mongodb-track
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-track
  type: ClusterIP

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-track
spec:
  serviceName: "mongodb-track"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-track
  template:
    metadata:
      labels:
        app: mongodb-track
    spec:
      containers:
        - name: mongodb-track
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data-track
              mountPath: /data/db
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
            - "--oplogSize"
            - "128"
      volumeClaimTemplates:
        - metadata:
            name: mongo-data-track
          spec:
            accessModes: [ "ReadWriteOnce" ]
            resources:
              requests:
                storage: 1Gi
