playlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlist
  template:
    metadata:
      labels:
        app: playlist
    spec:
      containers:
        - name: playlist
          image: dleo/playlist
          ports:
            - containerPort: 4000
          # env:
          #   - name: MONGO_URI
          #     value: "mongodb://mongodb-playlist:27017/playlists"
      imagePullSecrets:
        - name: docker-hub
      volumeMounts:
        - name: mongo-data-playlist
          mountPath: /data/db
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: playlist
  labels:
    app: playlist
spec:
  type: ClusterIP
  selector:
    app: playlist
  ports:
    - name: http
      port: 4000
      targetPort: 4000
