frontend-virtual-service.yaml
apiVersion: networking.istio.io/valpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: istio-system
spec:
  hosts:
  - frontend.piplib.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: forntend.default.svc.cluster.local
        port:
          number: 3000
    timeout: 30s
