playlist-virtual-service.yaml
apiVersion: networking.istio.io/valpha3
kind: VirtualService
metadata:
  name: playlist-virtual-service
  namespace: istio-system
spec:
  hosts:
  - playylist.piplib.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: playlist.default.svc.cluster.local
        port:
          number: 4000
    timeout: 30s
