track-virtual-service.yaml
apiVersion: networking.istio.io/valpha3
kind: VirtualService
metadata:
  name: track-virtual-service
  namespace: istio-system
spec:
  hosts:
  - track.piplib.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: track.default.svc.cluster.local
        port:
          number: 5000
    timeout: 30s
